--- a/src/components/style/_variables.scss
+++ b/src/components/style/_variables.scss
@@ -1,3 +1,4 @@
 $header-height: 15vh;
 $main-height: calc(100vh - $header-height);
 $darkgrey-bg-col: rgb(47, 47, 47);
+$darkergrey: rgb(36, 36, 36);
