headers + bg color style + trending shown when input is empty

--- a/src/components/style/_variables.scss
+++ b/src/components/style/_variables.scss
@@ -1,4 +1,4 @@
 $header-height: 15vh;
 $main-height: calc(100vh - $header-height);
-$darkgrey-bg-col: rgb(47, 47, 47);
-$darkergrey: rgb(36, 36, 36);
+$darkgrey-bg-col: rgb(26, 26, 26);
+$lightgrey: rgb(103, 103, 103);
